# research-assistant

./: .coveragerc  .gitignore  .notes.md  .oldresearch.md  .pre-commit-config.yaml  .research_shortcuts.yaml  <MagicMock name='_detect_device.__truediv__()' id='140100226455312'>  <MagicMock name='_detect_device.__truediv__()' id='140275142918416'>  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN_PRAGMATIC.md  LICENSE  README.md  ROOT_FILES_ANALYSIS.md  analyze_pipeline_completeness.py  analyze_problem_papers.py  analyze_problematic_papers.py  arxiv_enricher.py  azure_optimized_deployment.sh  build_kb.py  check_kb_paper_fields.py  cli.py  code_review_build_kb.md  collect_azure_results.sh  completeness_analysis_summary.md  comprehensive_problematic_papers_summary.py  comprehensive_problematic_papers_summary_20250901_032843.json  comprehensive_problematic_papers_summary_20250901_032843.md  comprehensive_problematic_papers_summary_20250901_032857.json  comprehensive_problematic_papers_summary_20250901_032857.md  comprehensive_problematic_papers_summary_20250901_032926.json  comprehensive_problematic_papers_summary_20250901_032926.md  comprehensive_problematic_papers_summary_20250901_032939.json  comprehensive_problematic_papers_summary_20250901_032939.md  comprehensive_problematic_papers_summary_20250901_032951.json  comprehensive_problematic_papers_summary_20250901_032951.md  crossref_batch_enrichment_checkpoint.py  crossref_enrichment.py  crossref_enrichment_comprehensive.py  (+56 more)
.claude/: settings.local.json
.claude/agents/: literature-analyzer.md  research-helper.md
.claude/commands/: discover.md  doi.md  dois.md  research.md
design/: v5.md
designs/: discover_slash_command_design.md  discover_tool_design.md  network_gap_analysis_design.md
docs/: CHANGELOG.md  advanced-usage.md  api-reference.md  design_review_recommendations.md  discover_slash_command_design.md  discover_tool_design.md  enhanced_quality_scoring_design.md  network_gap_analysis_design.md  sentence_boundary_chunking_design.md  technical-specs.md
extraction_pipeline/: README.md  pipeline_report.md
extraction_pipeline/01_tei_xml/: 22FYFR7M.xml  22HD3DFE.xml  22MLTF2X.xml  22PUFFPM.xml  22Z2FHDA.xml  23DNJEPS.xml  23DP75EL.xml  23R2C8ZL.xml  23T2GBUL.xml  2455VBYF.xml  24CYUJ6G.xml  25DF76L6.xml  26D3B6PM.xml  26K78KC8.xml  27IQPBR5.xml  287FB3QM.xml  28CJ9JEA.xml  28D8D2D9.xml  28UHQS3U.xml  29QVS3YU.xml  29RUZHFQ.xml  2ANJ2CT4.xml  2C2ZHKIC.xml  2D4NKC8I.xml  2D9BK2HL.xml  2DBYJNJS.xml  2DHMS7MM.xml  2EE737VI.xml  2EK6ZNNC.xml  2EL72PI5.xml  2EUQNPW6.xml  2EXIZ6KE.xml  2FG8ECDP.xml  2FH4STHN.xml  2FJGS6YP.xml  2FRNIEAV.xml  2G4JQNQM.xml  2G6EZAVE.xml  2G9KLVDQ.xml  2GKMZH5M.xml  (+2170 more)
extraction_pipeline/02_json_extraction/: 22FYFR7M.json  22HD3DFE.json  22MLTF2X.json  22PUFFPM.json  22Z2FHDA.json  23DNJEPS.json  23DP75EL.json  23R2C8ZL.json  (+2195 more)
kb_data/: index.faiss  metadata.json
reports/: doi_list_multi_behavior_interventions.md  research_implementation_frameworks_for_digital_health_intervention_for_adults_with_metabolic_disorder_20250117_150000.html  research_implementation_frameworks_for_digital_health_intervention_for_adults_with_metabolic_disorder_20250117_150000.md  research_major_decisions_digital_health_intervention_metabolic_disorder_20250117_093000.html  research_major_decisions_digital_health_intervention_metabolic_disorder_20250117_093000.md  research_multi_behavior_digital_intervention_frameworks_20250117.md
src/: __init__.py  analyze_failed_papers.py  analyze_gaps.py  analyze_openalex_failures.py  analyze_pipeline_completeness.py  analyze_pipeline_results.py  analyze_problem_papers.py  analyze_problematic_papers.py  analyze_raw_texts.py  api_utils.py  arxiv_enricher.py  build_kb.py  cli.py  cli_kb_index.py  comprehensive_problematic_papers_summary.py  comprehensive_tei_extractor.py  comprehensive_tei_extractor_checkpoint.py  config.py  core_enricher.py  crossref_batch_enrichment.py  crossref_batch_enrichment_checkpoint.py  crossref_enricher.py  crossref_enricher_v5_logged.py  crossref_enrichment.py  crossref_enrichment_comprehensive.py  crossref_enrichment_with_validation.py  demo.py  discover.py  explore_crossref_fields.py  extract_abstracts.py  extract_zotero_library.py  extraction_pipeline_runner.py  extraction_pipeline_runner_checkpoint.py  extraction_pipeline_runner_fixed.py  filter_non_articles.py  filter_papers_with_dois.py  final_cleanup_no_title.py  fix_malformed_dois.py  fix_missing_years.py  gap_detection.py  (+36 more)
tests/: README.md  RECOMMENDATIONS_ANALYSIS.md  TESTING_IMPROVEMENTS.md  conftest.py  pytest.ini  test_arxiv_skip_logic.py  test_batch_command.py  test_cache.py  test_cite_command.py  test_critical.py  test_incremental_updates.py  test_kb_index.py  test_pdf_extractors.py  test_pipeline_utils.py  test_reports.py  test_v4_features.py  utils.py
v4/: .notes.md  README.md
v5_design/: 00_DIRECTORY_STRUCTURE.md  01_overview.md  01_system_overview.md  02_grobid_extraction.md  03_installation_setup.md  03_post_processing.md  04_extraction_optimizations.md  04_implementation_guide.md  05_commands_reference.md  05_implementation_guide.md  06_installation_setup.md  07_troubleshooting.md  08_paper_filtering.md  09_complete_workflow.md  09_final_pipeline_results.md  10_complete_workflow.md  10_comprehensive_extraction_fix.md  11_comprehensive_extraction_fix.md  12_pipeline_architecture.md  13_filtering_rationale.md  13_quality_filtering_stage.md  14_zotero_integration.md  15_s2_optimization_complete.md  17_api_evaluation_summary.md  17_extended_enrichment_pipeline.md  18_checkpoint_recovery_system.md  20_pipeline_completeness_analysis.md  21_post_enrichment_processing.md  21_script_consolidation.md  22_batch_size_analysis.md  22_simplified_post_processing_final.md  23_recommendations_pros_cons.md  24_checkpoint_performance_analysis.md  25_arxiv_optimization_results.md  27_incremental_processing_implementation.md  28_incremental_processing_design.md  29_shared_utilities_module_analysis.md  30_base_stage_class_analysis.md  30_utilities_implementation.md  33_consistent_progress_reporting.md  (+13 more)
(+3917 files in other folders)
